Feat: add exception handling on each controller, add crud method for event and image store handling
