# routes/web.php
@@ -1,6 +1,11 @@
 <?php
 
-use App\Http\Controllers\{Api\V1\AuthController, LogicalTestController};
+use App\Http\Controllers\LogicalTestController;
+use App\Http\Controllers\Api\V1\{
+    AuthController,
+    EventController
+};
+
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -18,16 +23,27 @@ Route::get('/', function () {
     return view('welcome');
 });
 
-// lexicoGraphically result will showed on this route
-Route::get('/logical-test', [LogicalTestController::class, 'index']);
-
+// PRIVATE ROUTE
 // all of development test route
-
-// AUTH
 Route::group(['middleware' => 'api', 'prefix' => 'api/v1'], function () {
+    // AUTH
     Route::post('/register', [AuthController::class, 'register']);
     Route::post('/login', [AuthController::class, 'login']);
     Route::post('/logout', [AuthController::class, 'logout']);
     Route::post('/who-am-i', [AuthController::class, 'profile']);
+
+    // EVENT
+    Route::get('/event', [EventController::class, 'showList']);
+    Route::get('/event/{id}', [EventController::class, 'showDetail']);
+    Route::post('/event', [EventController::class, 'create']);
+    Route::post('/event/{id}', [EventController::class, 'update']);
+    Route::delete('/event/{id}', [EventController::class, 'delete']);
 });
+
+// PUBLIC ROUTE
+// lexicoGraphically result will showed on this route
+Route::get('/logical-test', [LogicalTestController::class, 'index']);
+
+// event route
+Route::get('/event/upcomings', [EventController::class, 'publicUpcoming']);
 
